# terifai

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
backend/: bot.py  helpers.py  install_deps.py  processors.py  prompts.py  server.py  spawn.py
examples/: README.md
examples/storytelling-chatbot/: fly.toml
frontend/: bun.lockb  env.example  index.html  package.json
frontend/src/: App.tsx  Splash.tsx  actions.ts  main.tsx
frontend/src/components/MaintenancePage/: index.tsx
frontend/src/components/Setup/: DeviceSelect.tsx  PromptSelect.tsx  RoomSetup.tsx  SettingsList.tsx  index.tsx
frontend/src/components/ui/: select.tsx
scripts/: build_docker.sh  delete_voices.py  fly_deploy.sh  run_docker.sh  set_wheel.sh
src/: bot.py  helpers.py  install_deps.py  processors.py  prompts.py  server.py  spawn.py  voice_clone.py
src/terifai/: __init__.py
