[project]
name = "terifai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aman Ibrahim", email = "amanmibra@gmail.com" }
]
dependencies = [
    "pipecat-ai[daily,openai,vad,silero]>=0.0.35",
    "async-timeout>=4.0.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/terifai"]

[tool.poetry]
name = "terifai"
version = "0.1.0"
description = "Add your description here"
authors = ["Aman Ibrahim <amanmibra@gmail.com>"]
