[project]
name = "terifai"
version = "0.1.3"
description = "Conversation AI that clones your voice."
authors = [
    { name = "Aman Ibrahim", email = "amanmibra@gmail.com" }
]
dependencies = [
    "pipecat-ai[daily,deepgram,openai,vad,silero]>=0.0.39",
    "pipecat-ai[xtts]>=0.0.39",
    "async-timeout>=4.0.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.5",
    "modal>=0.63.41",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
build_docker = "./scripts/build_docker.sh"
image = "./scripts/run_docker.sh"
fly_deploy = "./scripts/fly_deploy.sh"
bot = "python -m src.bot --default"
server = "python -m src.server --reload"